--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -105,28 +105,10 @@
 }
 
 .come-back__social {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    width: 44px;
-    height: 44px;
-
-    border-radius: 50%;
+    @include social;
 
     background-color: rgba(255, 255, 255, 0.10);
-    fill: var(--action-white-color);
-
-    transition-property: background-color, fill;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
-    &:hover,
-    &:focus {
-            fill: var(--action-white-color);
-            background-color: var(--accent-color);
-        }
-
+    
 }
 
 
@@ -175,24 +157,9 @@
     align-items: center;
     justify-content: center;
 
-    width: 200px;
-    height: 50px;
-
     margin-left: 12px;
 
-    color: var(--action-white-color);
-    text-align: center;
-    font-family: Roboto;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: calc(30/16);
-    letter-spacing: 0.96px;
-
-    border-radius: 4px;
-    background: var(--accent-color);
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-    border: none;
+    @include btn;
 }
 
 .form-email__span {
