--- a/scss/components/_filter.scss
+++ b/scss/components/_filter.scss
@@ -8,10 +8,10 @@
     display: flex;
     justify-content: center;
     margin-bottom: 50px;
+}
 
-    &:not(:first-child) {
-            margin-left: 8px;
-        }
+.filter__item:not(:first-child) {
+    margin-left: 8px;
 }
 
 .filter__btn {
